# rust-nostr-relay

./: .env.example  .gitignore  Cargo.toml  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEVELOPER_DOCUMENTATION.md  Dockerfile  FIRESTORE_INDEX_FIX_SUMMARY.md  HighSecurity_MLS_Relay_Tech_Spec.md  KEYPACKAGE_IMPLEMENTATION_SUMMARY.md  MIP-00.md  MLS_GATEWAY_EVENT_KINDS_447_450_SPECIFICATION.md  NIP-EE-RELAY.md  NIP-EE.md  OPERATIONAL_RUNBOOK.md  PROPOSED_Kinds_MLS_Noise.txt  README.md  REST_API_DOCUMENTATION.md  cio-brief-oauth2-mls-key-rotation.md  cloud-run-service.yaml  competitive-analysis-automatic-api-key-rotation.md  docker-entrypoint.sh  firestore.indexes.json  high-level-architecture-automatic-api-key-rotation.md  kms-mac-verification-implementation.md  nip-ad-hardening.md  nip-kr.md  nip-service.md  nostrsdk-nip-ee-requirements.md  oauth2-mls-key-rotation-implementation-plan.md  package-lock.json  package.json  test-websocket.js  test_deployment.rs
cline_docs/: activeContext.md  productContext.md  progress.md  systemPatterns.md  techContext.md
config/: rnostr.toml
data/events/: data.mdb  lock.mdb
db/src/: db.rs
docs/: CLIENT_KEYPACKAGE_QUERY_GUIDE.md
docs/architecture/: NIP-EE-RELAY.md  mls-service-member-plan.md  mls-service-member-storage.md  nip-kr-implementation-plan-rust-nostr-relay.md  nip-kr-mac-diagrams.md  nip-service-overview.md
extensions/: Cargo.toml
extensions/src/: lib.rs
extensions/src/mls_gateway/: endpoints.rs  firestore.rs  groups.rs  keypackage_consumer.rs  keypackage_delivery.rs  keypackage_encoding.rs  mailbox.rs  message_archive.rs  mod.rs  req_interceptor.rs  service_member.rs  storage.rs  test_keypackage_flow.rs  test_req_interception.rs
extensions/src/nip_service/: config.rs  dispatcher.rs  mod.rs  store.rs
extensions/src/nip_service/profiles/: kr.rs  mod.rs
plans/: auth-keypackage-relationship.md  auth-nip42-app-attestation-plan.md  firestore-keypackage-redesign.md  fix-keypackage-request-response.md  fix-mls-keypackages-index-error.md  fix-sqlite-provider-hmac-error.md  keypackage-base64-firestore-plan.md  keypackage-delayed-pruning-implementation.md  keypackage-delivery-fix-design.md  keypackage-delivery-fix-summary.md  keypackage-delivery-implementation-plan.md  keypackage-delivery-implementation.md  keypackage-delivery-issue-analysis.md  keypackage-delivery-revised-implementation.md  keypackage-delivery-root-cause-analysis.md  keypackage-pruning-simplified-implementation.md  keypackage-query-fix-implementation.md  keypackage-request-approaches-comparison.md  last-resort-keypackage-mitigation.md  nip-ee-447-modification-proposal.md  nip-ee-keypackage-implementation.md  nip-ee-keypackage-store-forward.md  nip-ee-relay-final-implementation.md  simplified-keypackage-req-implementation.md
relay/src/: extension.rs  message.rs  reader.rs  server.rs  session.rs  setting.rs  subscriber.rs
scripts/: deploy-local-build.sh  deploy.sh
src/: cleanup.rs  lib.rs  main.rs  relay.rs
