[package]
name = "rnostr"
version = "0.4.8"
description = "A high-performance and scalable nostr relay with MLS extensions."
keywords = ["nostr", "nostr-relay"]
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
path = "src/main.rs"
name = "rnostr"

[[bin]]
path = "test_deployment.rs"
name = "deployment_test"

[dependencies]
actix-rt = "2.10.0"
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
indicatif = "0.17.8"
nostr-db = { version = "0.4.5", path = "./db", features = ["search"] }
nostr-relay = { version = "0.4.8", path = "./relay", features = ["search"] }
nostr-extensions = { version = "0.4.8", path = "./extensions" }
rayon = "1.10.0"
thiserror = "1.0.63"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"] }
url = "2"
futures-util = "0.3"
serde_json = "1.0"

[features]
default = ["mls_gateway"]
mls_gateway = ["nostr-extensions/mls_gateway"]
mls_gateway_firestore = ["nostr-extensions/mls_gateway_firestore"]
mls_gateway_sql = ["nostr-extensions/mls_gateway_sql"]
# zstd = ["nostr-db/zstd"]

[workspace]

members = ["kv", "kv/bench", "db", "db/bench", "relay", "extensions"]

[workspace.package]
edition = "2021"
license = "Unlicensed"
homepage = "https://github.com/rnostr"
repository = "https://github.com/rnostr/rnostr.git"
authors = ["Arron zhang <arronzhang@me.com>","Jonathan Borden <jonathan@loxation.com>"]
