[package]
name = "nostr-extensions"
version = "0.4.8"
description = "Nostr relay extensions."
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true


[dependencies]

nostr-relay = { version = "0.4.8", path = "../relay" }
metrics = "0.23.0"
metrics-exporter-prometheus = { version = "0.15.3", optional = true, default-features = false, features = [
    "push-gateway",
] }
metrics-util = { version = "0.17.0", optional = true }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
actix = "0.13.5"
actix-web = "4.9.0"
parking_lot = "0.12.3"
tracing = "0.1.40"
governor = { version = "0.6.3", optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid"], optional = true }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22.1"
anyhow = "1.0.86"
hex = "0.4.3"
firestore = { version = "0.47", optional = true }
futures = { version = "0.3", optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
async-trait = "0.1"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
once_cell = "1.19.0"
# LOXATION MLS crate for service-member decrypt/dispatch (MLS-first NIP-SERVICE path)
loxation_mls_rust = { path = "/Users/jon/Documents/GitHub/loxation-mls/rust", optional = true }

[features]
default = ["metrics", "rate_limiter", "count", "search", "mls_gateway", "nip_service"]
search = ["nostr-relay/search"]
metrics = ["metrics-exporter-prometheus", "metrics-util"]
rate_limiter = ["governor"]
count = []
mls_gateway = ["mls_gateway_firestore"]
mls_gateway_sql = ["sqlx"]
mls_gateway_firestore = ["firestore", "futures", "reqwest"]
nip_service = []
# Enable MLS-first NIP-SERVICE path (decrypt kind 445 via RN MLS; optional)
nip_service_mls = ["loxation_mls_rust"]

[dev-dependencies]
actix-rt = "2.10.0"
actix-test = "0.1.5"
actix-web-actors = "4.3.1"
anyhow = "1.0.86"
bytes = "1.7.1"
futures-util = "0.3.30"
temp-env = "0.3.6"
tempfile = "3.12.0"
tracing-subscriber = "0.3.18"
